--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="regitrador_edades" content="width=device-width, initial-scale=1.0">
-        <title>Regitrador de edades</title>
+        <title>Patria Sur</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>Bienvenido a tu regitrador de edades</h1>
+            <h1>Registrate estudiante</h1>
         </header>
         <main>
-            <p>Aquí podras registrar tu edad solo tienes que introducir los datos que se te piden en las casillas</p>
+            <p>Aquí podras registrarte como estudiante del Colegio Patria Sur solo introduce los datos que se te piden en las casillas</p>
             <div>
                 <iframe src="https://www.youtube.com/embed/9E6b3swbnWg" allowfullscreen></iframe>
                 <br><br>
