--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>Registrate estudiante</h1>
-        </header>
         <main>
-            <p>Aquí podras registrarte como estudiante del Colegio Patria Sur solo introduce los datos que se te piden en las casillas</p>
             <div>
-                <iframe src="https://www.youtube.com/embed/9E6b3swbnWg" allowfullscreen></iframe>
-                <br><br>
-                <form id="formularioEstudiante">
+                <form id="formularioEstudiante" class="formularioEstudiante">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" required><br><br>
 
