agrege una pestaña que me enseña los usuarios agregados

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Patria Sur</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body class="registro">
         <main>
             <div>
                 <form id="formularioEstudiante" class="formularioEstudiante">
@@ -18,7 +18,7 @@
 
                     <label for="grado">Grado:</label>
                     <input type="text" id="grado" required><br><br>
-                    <button type="submit">Registrar usuario</button>
+                    <button type="submit" >Registrar usuario</button>
                 </form>
             </div>
         </main>
